Overflow Bug Fixed

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -1,5 +1,7 @@
 body
 {
+	width:100vw !important;
+	overflow:hidden;
 	margin: 0;
 	padding: 0;
 	background-color: #232129;
